2010-10-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-child): Show window only if not
	hidden.

	* src/clfswm-keys.lisp (binding-substitute-modifier): Utility to
	change modifiers after binding definition.

2010-10-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp: New file: OSD (On Screen Display) for
	presentations.

	* src/clfswm-menu.lisp (open-menu): Modularise function.

2010-10-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-first-aid-kit): Display the essential
	key binding in main and second mode.

2010-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (open-notify-window): Convert hello-window
	functions to a more generic Notify-window system.

	* src/tools.lisp (add-timer): Add an id to identify the timer.

2010-10-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (erase-timer): New function.

	* src/clfswm-util.lisp (display-hello-window): Add a timer to hide
	the hello window. Add Configuration variables.

2010-10-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (): Add an Hello window at startup.

	* src/tools.lisp (process-timers): Add a timer system.

2010-10-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (add-in-query-string): Handle correctly
	the mod-5 modifier.

2010-10-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-print-string): Change cursor color
	and show parenthesis matching with colors (on match and on
	errors).

2010-10-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Do not raise a
	child when its parent is hidden.

2010-10-02  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (select-next-subchild): Add the
	possibility to circulate over subchild of the current child.
